--- a/IntroductionToPython/00-Preliminaries.ipynb
+++ b/IntroductionToPython/00-Preliminaries.ipynb
@@ -77,7 +77,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d6e6c4a9",
    "metadata": {},
@@ -95,7 +94,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c630ca36-dc21-440b-b34c-dfc236d8037e",
    "metadata": {},
@@ -105,7 +103,9 @@
     "\n",
     "We did design some of the notebook cells to cause errors when executed. Sometimes, these errors just display specific output for your awareness. Other times you should make corrections until the code runs correctly.  Some cells are blank for you to enter code.  \n",
     "\n",
-    "Hyperlinks exist to outside resources throughout these notebooks. Unless explicitly mentioned, these links provide background information and are not essential."
+    "Hyperlinks exist to outside resources throughout these notebooks. Unless explicitly mentioned, these links provide background information and are not essential.\n",
+    "\n",
+    "The terms Python and the Python Interpreter are used interchangeably."
    ]
   },
   {
