--- a/IntroductionToPython/14-Sets.ipynb
+++ b/IntroductionToPython/14-Sets.ipynb
@@ -12,20 +12,29 @@
     "\n",
     "Sets support many of the same operations that lists and tuples have, but set objects also support mathematical operations such as union, intersection, and difference.  Since sets are unordered, index operations to retrieve and insert elements at specific points in the collection do not make sense and have no implementation.\n",
     "\n",
-    "Another way to think about sets is to equate them to a dictionary with its keys, but no values corresponding to those keys.\n",
+    "Another way to think about sets is to equate them to a dictionary with its keys but no values corresponding to those keys.\n",
     "\n",
-    "[Set theory](https://en.wikipedia.org/wiki/Set_theory) plays a pivotal role in many computer science applications  - most significantly relational databases, but we'll use sets for a variety of purposes. For example, we can create a unique collection (no repeated elements) from a list by converting it to a set.\n",
+    "[Set theory](https://en.wikipedia.org/wiki/Set_theory) plays a pivotal role in many computer science applications - most significantly relational databases, but programmers use sets for various purposes. For example, we can create a unique collection (no repeated elements) from a list by converting it to a set.\n",
     "\n",
-    "To create a set, use the `set()` function or enclose a comma-separate list of values within curly brackets. The `set()` function iterates the the value of its argument and adds members to the set, removing any duplicates.\n",
+    "To create a set, use the built-in function `set()` or enclose a comma-separated list of values within curly brackets. The `set()` function iterates through the the value of its argument and adds members to the set, removing duplicates.\n",
+    "\n",
     "To create an empty set, you must use the `set()` function as `{}` creates an empty dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b16b751",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'green', 'red', 'blue'}\n"
+     ]
+    }
+   ],
    "source": [
     "empty_set = set()\n",
     "primes = {1,2,3,5,7,13,11,13,17,19}\n",
@@ -49,7 +58,7 @@
    "id": "0fe1bd50",
    "metadata": {},
    "source": [
-    "In the above example, we are passing a string which can be considered an iterable sequence of characters.  Only 5 unique charaters exist in the word."
+    "In the above example, we pass a string, an iterable sequence of characters. Only five unique characters exist in the string. "
    ]
   },
   {
@@ -57,7 +66,7 @@
    "id": "010bf0c7",
    "metadata": {},
    "source": [
-    "As members must be unique within a set, mutable objects can not be placed into a set.  Otherwise, the value of that item could change and affect the uniqueness of the set.  In the second example, we create a set of a single tuple.  Tuples are immutable."
+    "As members must be unique within a set, we cannot place mutable objects into a set.  Otherwise, the value of that item could change and affect the set's uniqueness.  In the second example, we create a set of a single tuple.  Tuples are immutable."
    ]
   },
   {
@@ -86,7 +95,7 @@
    "metadata": {},
    "source": [
     "## Getting the size (number of entries) of a set\n",
-    "As with the other data structures, we can get the number of entries (length,size) of a set by using the `len()` function "
+    "As with the other data structures, we can get the number of entries (length, size) of a set by using the `len()` function "
    ]
   },
   {
@@ -126,7 +135,7 @@
    "metadata": {},
    "source": [
     "## Deleting from a set\n",
-    "Use `remove()` to delete / remove an item from a set by the value. If the value does not exist, a `KeyError` is raised.  `discard()` will remove a value from a set, but not raise an error.\n",
+    "Use `remove()` to delete (remove) an item from a set by the value. If the value does not exist, the Python interpreter raises a `KeyError`.  `discard()` will remove a value from a set, but will not raise an error if the value does not exist.\n",
     "\n",
     "To remove multiple items, use `difference_update()`"
    ]
@@ -152,15 +161,25 @@
    "metadata": {},
    "source": [
     "## Iterating over Sets\n",
-    "Just like the other built-in data structures, we can use `for` and `in` to process all of the items in a set."
+    "Just like the other built-in data structures, we can use the `for` statement(loop) to process all of the items in a set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9f9eb344",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "green\n",
+      "red\n",
+      "blue\n"
+     ]
+    }
+   ],
    "source": [
     "for color in colors:\n",
     "    print(color)"
@@ -177,21 +196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fabe69a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'magenta' in colors"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b24d4ca7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {
@@ -204,7 +226,7 @@
    "metadata": {},
    "source": [
     "## Set Operations\n",
-    "Python supports standard math operations on sets: union, intersection, difference, and symmetric difference.  Other data structures in Python do not support these set operations.\n",
+    "Python supports standard math operations on sets: union, intersection, difference, and symmetric difference.\n",
     "\n",
     "Set Operations can be performed either by method calls or opeartors.\n",
     "\n",
@@ -310,7 +332,7 @@
     "### Difference\n",
     "Returns a new set with the elements in the first set that are not in the other set. (Difference removes any elements in the second set from the first set.)  Use `difference()` or `-`\n",
     "\n",
-    "Yes, you can chain these together was well.  The operation works left to right."
+    "Yes, you can chain these operators. The operations evaluate left to right."
    ]
   },
   {
@@ -364,9 +386,9 @@
     "* $\\cap$ is the intersection operator\n",
     "* $\\cup$ is the union operator\n",
     "\n",
-    "At first glance, this problem seems easy - these law's have been around since the 19th century.  However, what does $\\overline{A}$ mean to a computer?  Fundamentally, this is everything in the universe $U$ that's not in set $A$.  Python, and most other general purpose programming languages do not have direct support for such a universal set.  As such, we need to define the universal set for our problem domain.\n",
+    "At first glance, this problem seems easy - these laws have been around since the 19th century.  However, what does $\\overline{A}$ mean to a computer?  Fundamentally, this is everything in the universe $U$ not in set $A$.  Python, and most other general-purpose programming languages, do not have direct support for such a universal set. Therefore, we need to define the universal set for our problem domain.\n",
     "\n",
-    "So, let's practice these laws on the flag colors. We can define a universal set of colors:\n",
+    "So, let us practice these laws on the flag colors. We can define a universal set of colors:\n",
     "\n",
     "$U = \\{ red, orange, yellow, green, blue, purple, pink, brown, grey, black, white, gold, silver \\}$\n",
     "\n"
@@ -413,7 +435,7 @@
    "id": "ddf78d00",
    "metadata": {},
    "source": [
-    "Throughout your programming career, you'll find De Morgan's law also coming up in regards to Boolean logic/algebra - one of your `if` statements will have a condition like `not(A or B)`."
+    "Throughout your programming career, you will find De Morgan's laws arising in Boolean operations - an `if` statements will have a condition like `not(A or B)`."
    ]
   },
   {
@@ -427,11 +449,11 @@
     "|Comparison | Method| Description|\n",
     "|:----:|:---|:----|\n",
     "| `a == b` | |Do sets `a` and `b` contain the same members?\n",
-    "| `a != b` | |Is there at least one diference between sets `a` and `b`?\n",
+    "| `a != b` | |Is there at least one difference between sets `a` and `b`?\n",
     "| `a < b` | `a.issubset(b)`|Is set `a` a proper subset of `b`?\n",
-    "| `a <= b` | | Is `a` a subset or equal to `b`?\n",
+    "| `a <= b` | | Is set `a` a subset or equal to `b`?\n",
     "| `a > b` | `a.issuperset(b)`| Is set `a` a proper superset of `b`?\n",
-    "| `a >= b` | |Is `a` a superset or equal to `b`?"
+    "| `a >= b` | |Is set `a` a superset or equal to `b`?"
    ]
   },
   {
@@ -491,7 +513,7 @@
     "TODO\n",
     "Thought  create two lists of strings  (common household stuff - book, cup , glass, knife, fork, ...)\n",
     "- create sets\n",
-    "- peform various operations\n"
+    "- perform various operations\n"
    ]
   },
   {
