--- a/IntroductionToPython/16-JSON.ipynb
+++ b/IntroductionToPython/16-JSON.ipynb
@@ -8,18 +8,18 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# JSON\n",
-    "JavaScript Object Notation (JSON) has become one of the most widely used data interchange formats on the Internet data.  JSON is also the record format used by some popular database management systems (DBMS) such as [Elasticsearch](https://www.elastic.co/) and [MongoDB](https://www.mongodb.com).  Relational DBMSs such as PostgreSQL and Oracle DB also now offer a JSON data type with support to query and index embedded fields.\n",
+    "JavaScript Object Notation (JSON) has become one of the Internet's most widely used data interchange formats. JSON is also the record format used by popular database management systems (DBMS) such as [Elasticsearch](https://www.elastic.co/) and [MongoDB](https://www.mongodb.com).  In addition, relational DBMSs such as PostgreSQL and Oracle DB now offer a JSON data type with support to query and index embedded fields.\n",
     "\n",
-    "Informally, the home page for JSON on the internet is at [https://json.org](https://json.org).  The format has also been formalized as a [standard](https://datatracker.ietf.org/doc/html/rfc8259).\n",
+    "Informally, the home page for JSON on the Internet is at [https://json.org](https://json.org).  The Internet Engineering Task Force has also formalized JSON as a [standard](https://datatracker.ietf.org/doc/html/rfc8259).\n",
     "\n",
-    "JSON is a text format, derived from object literals of JavaScript.  Fortunately for us, these literals are nearly identical to those used by Python.\n",
+    "JSON is a text-based format derived from object literals of JavaScript.  Fortunately, these literals are nearly identical to those used by Python.\n",
     "\n",
     "\n",
     "JSON contains four \"basic\" types (strings, numbers, Booleans, and null) and two structured types (objects \\[dictionaries\\] and arrays \\[lists\\]).  \n",
     "\n",
     "Strings follow the same definition as in Python - sequences of zero or more Unicode characters, except the literals use a double quote.  Booleans are identical, except `true` and `false` are not capitalized. Rather than using `None`, JSON uses `null`.\n",
     "\n",
-    "The followig example demonstrates a possible phone book entry:\n",
+    "The following example demonstrates a possible phone book entry:\n",
     "<pre>\n",
     "{\n",
     "\t\"name\": \"Bruce Wayne\",\n",
@@ -35,7 +35,7 @@
     "}\n",
     "</pre>\n",
     "\n",
-    "Because of the relative similarity between JSON and Python's literals, parsing JSON is straight-forward within Python and creates the corresponding built-in objects as expected.  As part of its \"[batteries included](https://peps.python.org/pep-0206/)\" philosophy, Python has built-in support for JSON in its standard library within the [JSON](https://docs.python.org/3/library/json.html) module."
+    "Because of the relative similarity between JSON and Python's literals, parsing JSON is straightforward within Python and creates the corresponding built-in objects as expected.  As part of its \"[batteries included](https://peps.python.org/pep-0206/)\" philosophy, Python has built-in support for JSON in its standard library within the [JSON](https://docs.python.org/3/library/json.html) module."
    ]
   },
   {
@@ -169,7 +169,7 @@
    "metadata": {},
    "source": [
     "## JSON and Files\n",
-    "To read and write from files, the json module has the functions `load()` and `dump()`.  Refer to the [documentation](https://docs.python.org/3/library/json.html) or use the online help for more information"
+    "To read and write JSON from/to files, the [json](https://docs.python.org/3/library/json.html) module has the functions `load()` and `dump()`.  Refer to the [documentation](https://docs.python.org/3/library/json.html) or use the online help for more information"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "id": "769d8a11",
    "metadata": {},
    "source": [
-    "Note: [https://jsonlint.com](https://jsonlint.com) provides a nice interface to validate JSON."
+    "Note: [https://jsonlint.com](https://jsonlint.com) provides an excellent  interface to validate JSON."
    ]
   },
   {
@@ -196,11 +196,11 @@
    "metadata": {},
    "source": [
     "## Case Study: Stock Quotes, REST, and JSON\n",
-    "Yahoo Finance has long published a series of APIs that allow developers and other systems to access stock market data. At one point, Yahoo sold subscription access to these APIs.  However, they have since shutdown their service, but their APIs are still directly accessible.  While a service still appears to be available from Yahoo, yahoofinanceapi.com, a Russian company actually provides that service. The DNS regristration records demonstrate this. You can run `whois yahoofinanceapi.com` from a command-line to see the details.  \n",
+    "Yahoo Finance has long published a series of APIs that allow developers and other systems to access stock market data. At one point, Yahoo sold subscription access to these APIs. However, they have since shut down their service, but their APIs are still directly accessible. While a service still appears available from Yahoo, a Russian company actually provides that service. The DNS registration records demonstrate this. You can run `whois yahoofinanceapi.com` from a terminal window (shel session) to see the details.  \n",
     "\n",
-    "While the following is not legal advice, currently in the United States it is permissible to access publicly available website to scrape data provided no authorization is required. https://en.wikipedia.org/wiki/HiQ_Labs_v._LinkedIn\n",
+    "While the following is not legal advice, currently, in the United States, it is permissible to access publicly available websites to scrape data, provided no authorization is required. https://en.wikipedia.org/wiki/HiQ_Labs_v._LinkedIn\n",
     "\n",
-    "The following code block demonstrates accessing the Yahoo Finance API to retrieve a stock quote. The complete JSON response is printed after displaying the price and market time in [ISO-8601 format](https://en.wikipedia.org/wiki/ISO_8601)."
+    "The following code block demonstrates accessing the Yahoo Finance API to retrieve a stock quote. After displaying the price and market time in [ISO-8601 format](https://en.wikipedia.org/wiki/ISO_8601), the code block prints the complete JSON response."
    ]
   },
   {
@@ -257,7 +257,7 @@
    "metadata": {},
    "source": [
     "## Exercise\n",
-    "1. Flatten the contents of the follow list into a file.  The first row of the file should be the column headers separated by tabs.  Each row is a record. Fields should be separated by tabs. You can assume each record has the same format.  The order of columns does not matter. For nested fields, you prefix the column name with the parent field name (zipCode shuold be address.zipCode) in the column header.\n",
+    "1. Flatten the contents of the following list into a file. The file's first row should be the column headers separated by tabs. Each row is a record. Separate fields by tabs; separate records by newlines. Assume each record has the same format. The order of columns does not matter. For nested fields, you prefix the column name with the parent field name (e.g., zipCode is address.zipCode) in the column header.\n",
     "<pre>\n",
     "entries='''\n",
     "[\n",
@@ -295,7 +295,7 @@
     "Clark Kent\\t154 5th Avenue\\tNew York City\\tNY\\t1221-6789\\tReporter\\tSuperman\\t212-359-4444\n",
     "</pre>\n",
     "Hints:\n",
-    "You need to recursively traverse the JSON structure (the dictionary with Python) to figure out the columns.\n",
+    "You must recursively traverse the JSON structure (the dictionary with Python) to figure out the columns.\n",
     "Then using those columns, recursive access data elements.  You can test for types is <code>type(<i>var_name</i>) is <i>type_name</i>."
    ]
   },
