--- a/IntroductionToPython/20-Testing.ipynb
+++ b/IntroductionToPython/20-Testing.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "We perform testing to increase confidence that our programs work correctly and that those programs meet our customer's expectations.\n",
     "\n",
+    "\n",
+    "\n",
     "Yes, initially, you can get away with manually testing your software as your write code.  (And in some ways, this is necessary - build a little, test that those parts work, and build some more.  Rinse, Lather, Repeat.). However, eventually you will have significant maintainability issues. As you make changes, how do you ensure those changes did not break something?\n",
     "\n",
     "Prior to the early 2000's, most software and system testing was a manual process.  Individuals wrote test scripts that were then executed.  Some unit test cases were built, but largely executed manually.  Since then, testing has been become automated (although not universally).  \n",
@@ -19,7 +21,17 @@
     "3. Immediate feedback\n",
     "4. Automation of test cases development.  Fuzzing - https://owasp.org/www-community/Fuzzing\n",
     "5. Automated testing is to foundation to continuous integration, continuous delivery, and other modern [DevOps practices](https://about.gitlab.com/topics/devops/).\n",
-    "6. Oh...  by the way, the automated grading of your program submissions - that's all unit tests."
+    "6. Oh...  by the way, the automated grading of your program submissions - that's all unit tests.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "This notebook will focus on verification of the code we have been developing - primarily this involves unit testing of the code we write.\n",
+    "\n",
+    "\n",
+    "This notebook will walk through developing test cases that can be run on an automated basis. Our overarching goal is two-fold:\n",
+    "1. Deliver high-quality products to our customers\n",
+    "2. Reduce costs as much as possible."
    ]
   },
   {
