--- a/IntroductionToPython/22-ClassesAndObjects.ipynb
+++ b/IntroductionToPython/22-ClassesAndObjects.ipynb
@@ -8,16 +8,15 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# Classes and Objects\n",
+    "As we mentioned earlier, everything in Python is an object. Objects are a special data structure that contains state (data/properties) and behavior (code/methods). Objects represent a unique, specific instance of something - typically what we think of as a \"noun\". The state models the attributes of that \"thing\", and the methods define the behavior and how it interacts with other \"things\" (objects).\n",
     "\n",
-    "As we mentioned earlier, everything in Python is an object.  Objects are a special data structure that contains state (data / properties) and behavior (code / methods).  Objects represent a unique, specific instance of something - typically what we think of as a \"noun\".  The state models the attributes of that \"thing\" and the methods define the behavior and how it interacts with other \"things\" (objects).\n",
+    "This notebook series started with imperative programming - just sequences of statements to execute. As we brought in functions - organized code blocks, reusing code to perform a task - we morphed into procedural programming. Procedural decomposition involves dividing a larger action into smaller actions. We used procedural decomposition to avoid code repetition where the same task was performed in multiple places in the same code file and reusing functions through importing modules. We also used procedural decomposition to provide structure. By treating several tiny steps as a unit, we abstracted that functionality and made it easier to remember and use.\n",
     "\n",
-    "This notebook series started with imperative programming - just sequences of statements to execute.  As we brought in functions - organized code blocks, reusing code to perform a task - we morphed into procedural programming. Procedural decomposition involves dividing a larger action into smaller actions.  We used procedural decomposition to avoid code repetition where the same task was performed in multiple places in the same code file as well as re-using functions through importing modules.  We also used procedural decomposition to provide structure.  By treating several tiny steps as a unit, we abstracted that functionality and made it is both easier to remember and to use.\n",
+    "Object-oriented programming is a style of programming focused on objects. We create objects and tell them to do stuff by calling functions that belong to those objects. We typically refer to those object functions as methods. When two objects interact by calling methods and receiving return values, you may hear this called passing messages. The sending message is the method name and the associated arguments. The response message is the return value(s). With object-oriented programming, We reason about a program as a set of interacting objects rather than a set of actions(procedural programming).\n",
     "\n",
-    "Object oriented programming is a style of programming focused upon objects.  We create objects and tell them to do stuff by calling functions that belong to those objects.  Those object functions are more commonly referred to as methods. When two objects interact by calling methods and receiving return values, you may hear this referred to as passing messages. The sennding message is the method name and the associated arguments. The response message is the return value(s). With object-oriented programming, We reason about a program as a set of interacting objects rather than a set actions(procedural programming).\n",
+    "Objects are instances of a class.  A class describes a type of object we might create.  Classes correspond to nouns - for example, a general category of something like a bank account or a stock.  Classes then define the fields (state) that the object will have.  They also define the behavior by defining methods within the class definition. Methods declarations are just function definitions within a class declaration. A class forms a blueprint from which we create objects.\n",
     "\n",
-    "Objects are instances of a class.  A class describes a type of object we might create.  Classes correspond to nouns - for example , a general category of something like a bank account or a stock.  Classes then define the fields (state) that the object will have.  They also define the behavior by defining methods within the class definition. Methods declarations are just function definitions within a class declaration. A class forms a blueprint from which we create objects.\n",
-    "\n",
-    "While modules allowed us to organize data and functions, we can ever only have once instance of that module.  With classes, we can have a virtually unlimited of instances (objects), each with their own potentially different attributes, but common behavior. "
+    "While we can organize data and functions into modules, we can only have one instance of that module. With classes, we can have virtually unlimited instances (objects), each with potentially different attributes but common behavior. "
    ]
   },
   {
@@ -53,7 +52,7 @@
     "That code block has now defined a new class that serves as a type.  A few things to note:\n",
     "* Just as \"def\" signifies we are defining a function, \"class\" signifies we are creating a class.\n",
     "* Rather than using all underscores with underscores to separate words, Python uses \"CamelCase\" as the naming convention for class names. \n",
-    "* As a class needs some content, the `pass` keyword instructs the Python interpreter to do nothing for that statement. `pass` is a _null_ statement.  In this particular situation, since a docstring was defined, `pass` is unnecessary, but the follow code will fail:"
+    "* As a class needs some content, the `pass` keyword instructs the Python interpreter to do nothing for that statement. `pass` is a _null_ statement.  In this particular situation, since a docstring was defined, `pass` is unnecessary, but the following code will fail:"
    ]
   },
   {
@@ -71,7 +70,7 @@
    "id": "69a06a40",
    "metadata": {},
    "source": [
-    "We defined a docstring to provide information to others (and ourselves a year later) to summarize the class purpose and behavior.  "
+    "We define a docstring to provide information to others (and ourselves a year later) to summarize the class purpose and behavior.  "
    ]
   },
   {
@@ -108,7 +107,7 @@
    "id": "a8393c12",
    "metadata": {},
    "source": [
-    "Account is an object of type BankAccount:"
+    "`account` is an object of the type BankAccount:"
    ]
   },
   {
@@ -128,9 +127,9 @@
    "source": [
     "With the current definition for BankAccount, we have created a new type and can instantiate new objects.  However, these objects have no defined behavior or state.\n",
     "\n",
-    "Python allows us to dynamically assign methods and attributes to an object, but that doesn't change the class definition.\n",
+    "Python allows us to assign methods and attributes dynamically to an object, but that does not change the class definition.\n",
     "\n",
-    "For example, we can add state to an object."
+    "So, for example, we can add state to an object."
    ]
   },
   {
@@ -151,7 +150,7 @@
    "id": "16d5e09f",
    "metadata": {},
    "source": [
-    "We can also define and assign a function to the object.  However, that function can not easily access any of the member state variables."
+    "We can also define and assign a function to the object.  However, that function can not easily access any member state variables."
    ]
   },
   {
@@ -174,9 +173,9 @@
    "id": "6c81ba2a",
    "metadata": {},
    "source": [
-    "In the previous block, we declared a function.  We then set `account.show_information` to reference that function definition.  (Functions are a special type of object in Python).  Finally, we called the function.  \n",
+    "In the previous block, we declared a function.  We then set `account.show_information` to reference that function definition.  (Functions are a particular type of object in Python).  Finally, we called the function.  \n",
     "\n",
-    "The above code also has an issue in that we only created the state and behavior for just the object `account`.  If we create another object from BankAccount, the resulting object will be empty as the class definition for BankAccount is currently empty. I.e., we have an empty blueprint. "
+    "The above code also has an issue in that we only created the state and behavior for just the object account. Therefore, if we create another object from BankAccount, the resulting object will be empty as the class definition for BankAccount is currently empty. I.e., we have a blank blueprint."
    ]
   },
   {
@@ -196,7 +195,7 @@
    "id": "d31ef83f",
    "metadata": {},
    "source": [
-    "As we define a class, we need to define the state and behavior that objects of that class will receive."
+    "As we define a class, we need to define the state and behavior that objects of that class possess."
    ]
   },
   {
@@ -253,7 +252,7 @@
    "id": "4d833355",
    "metadata": {},
    "source": [
-    "The revised class definition of BankAccount shows a number of changes:\n",
+    "The revised class definition of BankAccount shows several concepts:\n",
     "\n",
     "First, we assigned a class attribute `balance` to BankAccount.  Any objects instantiated after a class attribute has been defined will automatically contain these class attributes with the currently assigned value. This allows us to see the \\$0.00 balance when the method `show_information()` is called.  While not a recommended practice, programmers can also add attributes to a class after it has been defined<sup>1</sup>.\n",
     "\n",
@@ -857,7 +856,15 @@
     "2. Define a class Bookshelf that holds a collection of books. You should implement the following behavior:\n",
     "   1. add_book(book).  Adds a book to the bookshelf\n",
     "   2. remove_book_by_title(title).  Removes a book based upon its title.\n",
-    "   3. find_most_expensive_book(). Returns the book that is most expensive."
+    "   3. find_most_expensive_book(). Returns the book that is most expensive.\n",
+    "   \n",
+    "3. Implement a class named `MyClock24` that represents a 24-hour hour clock.  Objects of this class should have three instance properties: hour, minute, and second.  (Note: this does not require that you have to track the clock state with three variables, only that you have to expose / implement those three properties to get and set the time. Using the information hiding principle, a class should decide its implementation. )  The following behavior needs to be implemented:\n",
+    "   - a `tick()` method that advances the clock one second. \n",
+    "   - a \\_\\_str\\_\\_ method that prints the time in this format: HH:MM:SS\n",
+    "   - a \\_\\_repr\\_\\_ method that prints out the hour, minute, and second attributes as a dictionary literal.\n",
+    "   - Override the dunder methods for  eq, ge, gt,le,lt.  Use the comparison of the full time for these methods.\n",
+    "   - Override the dunder methods for add, sub to add and substract times\n",
+    "   - Note: If the time becomes > 23:59:59, then the time should roll over to the next day as appropriate. "
    ]
   },
   {
