--- a/IntroductionToPython/30-Preconditions,Postconditions,Invariants,andAssertions.ipynb
+++ b/IntroductionToPython/30-Preconditions,Postconditions,Invariants,andAssertions.ipynb
@@ -8,7 +8,7 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# Preconditions, Postconditions, Invariants, and Assertions\n",
-    "While this title seems long, it is ultimately the same underlying principal at work in different ways - checking if a condition holds or not.\n",
+    "While this title seems long, it is ultimately the same underlying principle at work in different ways - checking if a condition holds or not. \n",
     "\n",
     "Looking back to the original documentation we produced for an algorithm:\n",
     "* Inputs to the routine\n",
@@ -17,13 +17,19 @@
     "\n",
     "We can add two additional items: _preconditions_ to the routine and _postconditions_ of the routine.\n",
     "\n",
-    "_Preconditions_ are conditions guaranteed to be true before the routine.  This includes things such as inputs being in appropriate ranges and files initialized and ready for input/output. _Preconditions_ are the client code's obligations to the routine that it calls.  For example, if we create a shape such as a circle or a square, the radius or side length needs to a non-negative number. As we write code, we should check that these preconditions hold.  If not, then an appropriate error handling technique needs to be performed such as logging the issue, returning an error code, or raising an exception.\n",
+    "_Preconditions_ are conditions guaranteed to be true before the routine. These conditions\n",
+    "include such things as inputs in appropriate ranges and files initialized and ready for\n",
+    "input/output. _Preconditions_ are the client code’s obligations to the routine that it \n",
+    "calls. For example, if we create a shape such as a circle or a square, the radius or \n",
+    "side length must be a nonnegative number. As we write code, we should check that these\n",
+    "preconditions hold. If not, an appropriate error handling technique is needed, such as\n",
+    "logging the issue, returning an error code, or raising an exception.\n",
     "\n",
-    "_Postconditions_ are the conditions(items) guaranteed to be true before control is passed back to the caller.  This is the routine's/class's obligation to the code that uses it. For example, if a routine adds an element to a list, a post-condition is that the list is not empty.  Or more strongly, that the length of a list is one more than length of the list when the routine started.\n",
+    "_Postconditions_ are the conditions(items) guaranteed to be true before control returns to the caller. These conditions are the routine’s/class’s obligations to the code that uses it. For example, if a routine adds an element to a list, a postcondition is that the list is not empty. Or, more strongly, the length of a list is one more than the length of that list when the routine started.\n",
     "\n",
-    "_Invariants_ are a set of conditions(assumptions) that must always hold true during the life of a program (or more narrowly, by the life of an object).  You can consider this to be a combined precondition and postcondition - it must be valid before and after a call to a method. However, it may not necessarily be true when executing a routine that changes the relevant state/attributes for the condition.  For objects, invariants should hold from the end of the constructor until the object is destroyed.  As an example, the radius of a circle must always be non-negative.  The term invariant can also be applied to a sequence of operations.  In this situation, it is the set of conditions that remain true during these operations.\n",
+    "_Invariants_ are a set of conditions(assumptions) that must always hold true during the life of a program (or, more narrowly, by the life of an object). You can consider this to be a combined precondition and postcondition - it must be valid before and after a call to a method. However, while executing a routine that changes the relevant state/attributes for the condition, the invariant may not necessarily be true. Invariants should hold during the object’s lifetime - from the end of its constructor to the end of its destructor. As an example, the radius of a circle must always be nonnegative. We also apply the term invariant to a sequence of operations. In this user, the invariant is the set of conditions that remain true during these operations.\n",
     "\n",
-    "_Assertions_ are a series of statements used during development that allows a program to check itself as it runs.  _Assertions_ are sanity checks that conditions hold true.  We use _assertions_ to document assumptions into the code.  _Assertions_ are primarily meant as a development/debugging tool - it is possible to turn off these checks completely.  As such any critical checks (data validation, authorization) should not be contained in an assert statement."
+    "_Assertions_ are a series of statements used during development that allows a program to check itself as it runs. _Assertions_ are sanity checks that conditions hold true. We use _assertions_ to document assumptions in the code. Primarily, we use _assertions_ as a development/debugging tool - it is possible to turn off these checks completely. Do not use assert statements for necessary checks (data validation, authorization)."
    ]
   },
   {
@@ -32,13 +38,13 @@
    "metadata": {},
    "source": [
     "## Assertion Example\n",
-    "Suppose, we are building an online stock market system and need to compute the purchase price of a stock.  The bonus offer is a discount off of the transaction for special promotions such as new customer enticement.\n",
+    "Suppose we build an online stock market system and need to compute the purchase price of a stock. As part of the business rules, the company can offer incentives such as a discount on the transaction cost for special promotions such as new customer enticement.\n",
     "<pre>\n",
     "def compute_charge(num_shares, price_per_share, commission_charge, bonus_offer):\n",
     "    amount = num_shares * price_per_share + commission_charge - bonus_offer\n",
     "    return amount\n",
     "</pre>\n",
-    "However, what happens if <code>bonus_offer > num_shares * price_per_share + commission_charge</code>? Do we owe money to the client as a result of the client buying stocks?  In this situation, we need an assertion that the amount is positive.  We could also add another assertion that the `amount` is less than or equal to the <code>num_shares * price_per_share + commission_charge</code>. (This covers a negative values passed in `bonus_offer`.)"
+    "However, what happens if `bonus_offer > num_shares * price_per_share + commission_charge`? Do we owe the client money due to the client buying stocks?  In this situation, we need an assertion that the amount is positive.  We could also add another assertion that the `amount` is less than or equal to the <code>num_shares * price_per_share + commission_charge</code>. (This covers negative values passed in `bonus_offer`.)"
    ]
   },
   {
@@ -89,7 +95,7 @@
    "id": "584d1058",
    "metadata": {},
    "source": [
-    "Fixing the last condition requires a check to be added to `compute_charge` that prevents the amount if being negative. For a negative bonus offer, we could choose among several different possibilities. We could add validation for each of the function's parameters.  We could also simply not choose to perform any validation as the call came from within our program."
+    "Fixing the last condition requires a check to be added to `compute_charge` that prevents a negative. For a negative bonus offer, we could choose among several different possibilities. We could add validation for each of the function's parameters.  We could also simply not choose to perform any validation as the call came from within our program."
    ]
   },
   {
@@ -156,7 +162,7 @@
    "id": "457e2fd6",
    "metadata": {},
    "source": [
-    "At first glance, the assert in `compute_circumference` does not seem necessary.  However, a programmer could have manually changed a circle's radius after the circle was created."
+    "At first glance, the assert in `compute_circumference` does not seem necessary.  However, a programmer could have manually changed a circle's radius after the circle's construction."
    ]
   },
   {
@@ -176,7 +182,7 @@
    "id": "74164dc4",
    "metadata": {},
    "source": [
-    "However, suppose a coworker was asked to make a change to the Circle class to add a method that allows a correction percentage that would modify a radius.  That correction percentage could be positive or negative.  The initial implementation could have been - "
+    "However, suppose a coworker changed the Circle class to add a method that allows a correction percentage that would modify a radius.  That correction percentage could be positive or negative.  The initial implementation could have been - "
    ]
   },
   {
@@ -217,9 +223,9 @@
    "id": "425930a5",
    "metadata": {},
    "source": [
-    "The coworker had not fully considered all of the potential side issues the change may have.  While this is relatively simple, similar types of problems occur in much more complex situations.  By using the assert, we at least have some sanity check in place.  Our testing may or may not have found this particular situation.\n",
+    "The coworker had not fully considered the potential side issues the change may have. While this is relatively simple, similar problems occur in much more complex situations. Using the `assert`, we at least have a sanity check. Our testing may or may not have found this particular situation.\n",
     "\n",
-    "In looking at the 'Circle' class, we applied name mangling to highlight that developers shouldn't directly change the values, but we can create a more robust situation by validating the radius whenever it is changed.  In this solution, we establish a getter and setter property for radius. The radius setter always validates that its value is non-negative."
+    "In looking at the `Circle` class, we applied name mangling to highlight that developers should not directly change the values. However, we can create a more robust situation by validating the radius whenever it is changed. In this solution, we establish a getter and setter property for radius. The radius setter always validates that its value is nonnegative."
    ]
   },
   {
@@ -278,7 +284,7 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "Assertions are an underutilized tool in many programmers' arsenal. By documenting assumptions, asserts can help programmers identify situations in which those assumptions are violated.  Care should be given, though, when using assertions - they are not a mechanism for detecting run-time errors as they can be globally disabled through the Python interpreter. Do not use asserts to implement application functionality (e.g., data validation)."
+    "Assertions are an underutilized tool in many programmers’ arsenal. By documenting assumptions, asserts can help programmers identify situations that violate those assumptions. Pay careful attention, though, when using assertions - they are not a mechanism for detecting run-time errors, as they can be globally disabled through the Python interpreter. Also, do not use asserts to implement application functionality (e.g., data validation)."
    ]
   },
   {
