--- a/IntroductionToPython/32-Comprehensions.ipynb
+++ b/IntroductionToPython/32-Comprehensions.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Python has a bit of [syntactic sugar](https://en.wikipedia.org/wiki/Syntactic_sugar) to help create lists, sets, and dictionaries.\n",
     "\n",
-    "While technically not needed, comprehensions allow programmers to create lists from other sequences in a clean and concise manner."
+    "While technically not needed, comprehensions allow programmers to create lists from other sequences cleanly and concisely."
    ]
   },
   {
@@ -70,7 +70,7 @@
     "for <i>item</i> in <i>iterable</i>:\n",
     "    values.append(<i>expression</i>)\n",
     "</pre>\n",
-    "With comprehensions, we can also provide filtering capability by adding a condition to the comprehension.  These list comprehensions will have this pattern:\n",
+    "We can also provide filtering capability by adding a condition to the comprehension.  These list comprehensions have this pattern:\n",
     "<pre>\n",
     "[<i>expression</i> for <i>item</i> in <i>iterable</i> if <i>condition</i>]\n",
     "</pre>\n",
@@ -121,7 +121,7 @@
    "id": "5dd1e937",
    "metadata": {},
    "source": [
-    "You can also create lists of lists by using a list comprehension as the _expression_. This is called nested comprehensions."
+    "You can also create lists of lists by using a list comprehension as the _expression_ (i.e., a nested comprehension.)"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "metadata": {},
    "source": [
     "## Set Comprehensions\n",
-    "Set comprehensions function in the same manner as list comprehension, except that we use curly brackets at the start and the end.\n",
+    "Set comprehensions function in the same manner as list comprehensiona, except that we use curly brackets at the start and the end.\n",
     "\n",
     "The two formats are - \n",
     "<pre>\n",
@@ -166,7 +166,7 @@
    "metadata": {},
    "source": [
     "## Dictionary Comprehensions\n",
-    "Dictionary comprehensions function the same as list and set comprehension, they just have a slightly more complex syntax as we need to store both the key and the value.  Dictionary comprehensions follow one of these two formats:\n",
+    "Dictionary comprehensions function the same as list and set comprehensions; they just have a slightly more complex syntax as we need to store both the key and the value.  Dictionary comprehensions follow one of these two formats:\n",
     "<pre>\n",
     "{<i>key_expression</i> : <i>value_expression</i> for <i>item</i> in <i>iterable</i>}\n",
     "{<i>key_expression</i> : <i>value_expression</i> for <i>item</i> in <i>iterable</i> if <i>condition</i>}\n",
@@ -219,7 +219,7 @@
    "id": "c226237e",
    "metadata": {},
    "source": [
-    "As another example, this comprehension will revert the keys and values in a dictionary.  As many of the values are not unique, we will have less entries in the new dictionary."
+    "As another example, this comprehension swaps the keys and values in a dictionary. As many values are not unique, we will have fewer entries in the new dictionary."
    ]
   },
   {
@@ -239,9 +239,9 @@
    "metadata": {},
    "source": [
     "## Maps and Filters\n",
-    "While not directly used by name, comprehensions use two key capabilities found a functional programming paradigm: map and filter.\n",
+    "While not directly used by name, comprehensions use two key capabilities found in functional programming: map and filter.\n",
     "\n",
-    "Mapping is the process of transforming a single value into another value either by applying an expression or calling a function with the original value. In the second example, `x**2` serves as _map_.  Applying a map along will result in a list having the same number of elements as before, although it is not necessary for the resulting values to have the same type as the original. For example, a map can convert a list of numbers to a list of strings."
+    "Mapping transforms a single value into another value by applying an expression or calling a function with the original value. In the second example, `x**2` serves as a _map_.  Applying a map will result in a list with the same number of elements as before, although the resulting values do not need to have the same type as the original. For example, a map can convert a list of numbers to a list of strings."
    ]
   },
   {
@@ -261,7 +261,7 @@
    "id": "61b020ad",
    "metadata": {},
    "source": [
-    "Filtering is the process of selecting only certain elements that match a condition.  Comprehensions perform this with their <code>if</code> <i>condition</i> clauses.  Typically, the resulting list will have fewer elements than the original iterable being filtered.  In the second code example, `if number % 2 == 0` serves as a _filter_."
+    "Filtering selects only certain elements that match a condition. Comprehensions perform this with their <code>if</code> <i>condition</i> clauses.  Typically, the resulting list will have fewer elements than the original iterable.  In the second code example, `if number % 2 == 0` serves as a _filter_."
    ]
   },
   {
@@ -271,7 +271,7 @@
    "source": [
     "## Notes\n",
     "1. Only mutable types (lists, sets, and dictionaries) have comprehensions.  \n",
-    "2. While comprehensions are a powerful tool, it does become easier to write code that's difficult to read - especially with nested comprehension.  A key tenet in programming is to produce code that can be maintained - this requires that the code be readable and understood both by yourself and by others.  Using for-loops to create nested collections will most likely be easiest to understood."
+    "2. While comprehensions are a powerful tool, it does become easier to write code that’s difficult to read - especially with nested comprehension. A fundamental tenet in programming is to produce maintainable code - this requires that the code be readable and understood both by yourself and by others. Using for-loops to create nested collections will likely be the easiest to understand."
    ]
   },
   {
@@ -280,7 +280,7 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "1. Write a list comprehension that create a list of tuples.  Each tuple's first element is the numbers 10,20,30,40,50,60,70,80,90,100.  The second value of the tuple is the first number squared"
+    "1. Write a list comprehension to create a list of tuples.  Each tuple's first element is the numbers 10,20,30,40,50,60,70,80,90,100.  The second value of the tuple is the first number squared"
    ]
   },
   {
