--- a/IntroductionToPython/15.2-FileOperations.ipynb
+++ b/IntroductionToPython/15.2-FileOperations.ipynb
@@ -9,9 +9,10 @@
     "\n",
     "# File Operations\n",
     "\n",
-    "Python's view of files and directories is largely based from the Unix/Linux operating system variants.  [Overview of the Unix File System](https://web.archive.org/web/20210419161551/https://homepages.uc.edu/~thomam/Intro_Unix_Text/File_System.html)\n",
+    "Pythonʼs view of files and directories derives from the Unix/Linux operating system variants.  [Overview of the Unix File System](https://web.archive.org/web/20210419161551/https://homepages.uc.edu/~thomam/Intro_Unix_Text/File_System.html)<br>\n",
+    "(You should know the material on the \"Overview of the Unix File System\" page.)\n",
     "\n",
-    "Support for files is defined with Python's [io](https://docs.python.org/3/library/io.html) module\n",
+    "Python's [io](https://docs.python.org/3/library/io.html) module provides support for files.\n",
     "\n",
     "Python's functionality largely mirrors that as provided by various command-line programs and the underlying standard C libraries upon which Python is implemented.\n"
    ]
@@ -141,7 +142,7 @@
    "source": [
     "Initially, that result looks very esoteric, but once we break down a few of the fields, it makes more sense.\n",
     "\n",
-    "The `st_mode` contains the file type and permissions associated with the file.  Using `ls -l` we see this data represented with a string that looks like '-rwxr-xr-x'.  This first character specifies the type: '-' for files and 'd' for directories.  The next 9 characters represent the permissions for the user, group, and world in terms of read, write, and execute.  Typically, st_mode makes more sense in it's octal representation."
+    "The `st_mode` contains the file type and permissions associated with the file.  Using `ls -l`, we see this data represented with a string that looks like '-rwxr-xr-x'.  This first character specifies the type: '-' for files and 'd' for directories.  The next nine characters represent the user, group, and world permissions in terms of read, write, and execute.  Typically, st_mode makes more sense in its octal representation."
    ]
   },
   {
@@ -167,13 +168,13 @@
    "id": "2df4e38c",
    "metadata": {},
    "source": [
-    "The first number represents the file type.  You'll see 40 for a directory and 100 for a file.  The last three numbers correspond to the owner, group, and world permissions using a bit representation for read, write, and execute. 111 in binary equals 7 in octal.  101 = 5 in octal, so only read and execute permissions are present.  100 = 4 in octal, so only read.\n",
+    "The first number represents the file type.  You will see 40 for a directory and 100 for a file.  The last three numbers correspond to the owner, group, and world permissions using a bit representation for read, write, and execute. For example, 111 in binary equals 7 in octal - so read, write, and execute permssions are set for that group.  101 = 5 in octal, so only read and execute permissions are set.  100 = 4 in octal, so only read.\n",
     "\n",
     "For more explanation, see the \"Understanding and Modifying File Permissions\" section of [Overview of the Unix File System](https://web.archive.org/web/20210419161551/https://homepages.uc.edu/~thomam/Intro_Unix_Text/File_System.html).\n",
     "\n",
     "st_size is the number of bytes to contain the file's contents.\n",
     "\n",
-    "st_atime, st_mtime, st_ctime represent when the file was last accessed, modified, and created.  These are specified in seconds. To convert to a date and time, they present the number of seconds since Unix epoch which is midnight on January 1st, 1970.  While this fact seems really esoteric, this is a very common base representation for dates and times.  Fortunately, as with other languages, Python provides APIs to perform the necessary conversion into a datetime object."
+    "st_atime, st_mtime, and st_ctime represent when the file was last accessed, modified, and created.  The times are specified in seconds. To convert to a date and time, they present the number of seconds since the Unix epoch, which is midnight on January 1st, 1970.  While this fact seems  esoteric, this is a ubiquitous representation of dates and times.  Fortunately, as with other languages, Python provides APIs to perform the necessary conversion into a datetime object."
    ]
   },
   {
@@ -202,7 +203,7 @@
    "metadata": {},
    "source": [
     "## Directory Operations\n",
-    "As with files, Python supports a wide variety operations on directories: "
+    "As with files, Python supports various directory operations."
    ]
   },
   {
@@ -230,7 +231,7 @@
    "metadata": {},
    "source": [
     "### List Directory Contents\n",
-    "Use `os.listdir()` list the contents of a directory.  This returns a list of file names (strings) within that directory."
+    "Use `os.listdir()` list the contents of a directory.  This method returns a list of file names (strings) within that directory."
    ]
   },
   {
@@ -292,7 +293,7 @@
    "metadata": {},
    "source": [
     "### Delete Directory\n",
-    "To delete a directory, use `os.rmdir()`.  However, the directory must be empty before it can be deleted.  You cannot use `os.remove()` to delete a directory, only a file."
+    "To delete a directory, use `os.rmdir()`.  However, the directory must be empty to be deleted – it cannot contain any other files or directories.  You cannot use `os.remove()` to delete a directory, only a file."
    ]
   },
   {
@@ -398,7 +399,7 @@
    "metadata": {},
    "source": [
     "## Pathnames\n",
-    "Most computers use a hierarchical file system. As such,  we have a current working directory based upon where our current shell session.  Other times, that working directory is based upon setting when an executable is started.  At the command-line within the shell session), you can print the working directory with `pwd`.  With Python, we get the current working directory with "
+    "Most computers use a hierarchical file system. As such, we have a current working directory based on our current shell session. Other times, a setting when an executable starts can establish the working directory. At the command line within the shell session), you can print the working directory with `pwd`.  With Python, we get the current working directory with "
    ]
   },
   {
@@ -434,9 +435,9 @@
    "id": "c22a83c6",
    "metadata": {},
    "source": [
-    "Throughout this notebook (and in most of file/directory operation commands), we passed a directory name or file name as arguments into the various function calls. As we specify those names, we can  either specify *absolute* or *relative* pathnames.  *Absolute* pathnames start from the root (top) directory - these pathnames will start with a `/`. *Relative* pathnames start from the current directory.  As demonstrated in a code block above `.` refers to the current directory and `..` refers to its parents.  \n",
+    "Throughout this notebook (and in most file/directory operation commands), we pass a directory name or file name as arguments into the various function calls. As we specify those names, we can  either specify *absolute* or *relative* pathnames.  *Absolute* pathnames start from the root (top) directory - these pathnames start with a `/`. *Relative* pathnames start from the current directory.  As demonstrated in this notebook's first code block, `.` refers to the current directory, and `..` refers to its parents.  \n",
     "\n",
-    "To separate directories, most systems use a forward slash `/`. The exception is Windows, which uses a backward slash `\\`.  The reasoning dates back to the early days of MS-DOS in the 1980s.  The '/' was used to specify command line arguments whereas Unix typically uses a dash `-`.  Windows is slowly migrating away from the `\\`.  Within PowerShell, you can specify names with a `/`, it will just convert it to `\\`. Powershell uses `-` to specify arguments  The lesson with this migration is how long it takes changes to be made once an initial decision has been implemented."
+    "To separate directories, most systems use a forward slash `/`. The exception is Windows, which uses a backward slash `\\`.  The reasoning dates back to the early days of MS-DOS in the 1980s.  The '/' was used to specify command line arguments, whereas Unix typically uses a dash `-`.  Windows is slowly migrating away from the `\\`.  Within PowerShell, you can specify names with a `/`, PowerShell converts it automatically to `\\`. Powershell uses `-` to specify arguments. This migration demonstrates how difficult it is to overcome an implemented decision."
    ]
   },
   {
@@ -445,7 +446,7 @@
    "metadata": {},
    "source": [
     "### Finding Absolute Pathnames\n",
-    "From a relative pathname, we can find the absolute pathname with `os.path.abspath()`"
+    "From a relative pathname, we can determine the absolute pathname with `os.path.abspath()`"
    ]
   },
   {
@@ -483,9 +484,9 @@
    "metadata": {},
    "source": [
     "## Pathlib\n",
-    "In Python 3.4, the language developers added the `pathlib` module.  This provides an alternative to the `os` module presented in this notebook.\n",
+    "In Python 3.4, the language developers added the `pathlib` module.  This module provides an alternative to the `os` module presented in this notebook.\n",
     "\n",
-    "The primary change has been in the introduction of a `Path` class to treat files and directories as an object with methods that we call from that object rather than using strings and calling functions under `os`.  \n",
+    "The `pathlib` module introduced a `Path` class to treat files and directories as objects with methods we call from that object rather than strings and calling functions under `os`.  \n",
     "\n",
     "[Further details](https://docs.python.org/3/library/pathlib.html)  The very bottom of that page shows the correspondence between the two approaches."
    ]
@@ -495,21 +496,13 @@
    "id": "02949aa6",
    "metadata": {},
    "source": [
-    "## Exercises \n",
-    "1. For the current working directory, print each of the files on a separate line.  Each line should start with the size of that file in bytes, followed by a tab character, and then the name of the file. Subdirectories should not be displayed. After all of the lines have been, print a blank line and then this line: \n",
+    "## Exercise\n",
+    "For the current working directory, print each of the files on a separate line.  Each line should start with the file size in bytes, followed by a tab character, and then the file's name. Do not display subdirectories. Sort this output by the file name. After all of the lines have been, print a blank line and then this line: \n",
     "<pre>\n",
     "Directory size: XXXX\n",
     "</pre>\n",
-    "where XXX is the total of all of the file sizes (excluding subdirectories).  The listing should be in sorted order of the files.\n"
+    "where XXX is the total of all the file sizes (excluding subdirectories). \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43f3f31b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
