--- a/IntroductionToPython/19-SoftwareDevelopmentProcess.ipynb
+++ b/IntroductionToPython/19-SoftwareDevelopmentProcess.ipynb
@@ -6,27 +6,24 @@
    "metadata": {},
    "source": [
     "# Software Development Process\n",
-    "The notebook examines the broader picture as to how software is built.\n",
+    "The notebook examines the broader picture of how developers and teams build software.\n",
     "\n",
     "The prototypical software development lifecycle model is the [Waterfall Model](https://en.wikipedia.org/wiki/Waterfall_model).\n",
     "\n",
     "![](images/sw_lifecycle.png)\n",
     "<br>\n",
     "This model divides up the process into distinct phases:\n",
-    "- _Requirements_: Understand and document what needs to built to meet a customer's need.\n",
-    "- _Design_: Determine how to best build the system.  Exploratory code may written to perform research.\n",
+    "- _Requirements_: Identify, understand, and document customer needs in order to build the right product.\n",
+    "- _Design_: Determine how to build the system appropriately. Developers may write exploratory code to research the most effective techniques.\n",
     "- _Code and Implementation_: Build the system.\n",
-    "- _Test_: Ensure both that the system meets the specification as documented (verification) and that the system meets the customer's needs (validation).\n",
+    "- _Test_: Ensure that the system meets the specification as documented (verification) and that the system meets the customer's needs (validation).\n",
     "- _Maintenance and Operations_: Deploy the system for production. Perform fixes and add enhancements as necessary.\n",
     "\n",
-    "Originally, the waterfall method followed a sequential process where each phase was completed and verified\n",
-    "so that the phase's outcomes (deliverables) would serve as inputs into the next phase. For all be the \n",
-    "most well-defined projects (i.e., projects that have unambiguous requirements with customers unlikely \n",
-    "to change the project's scope), this method has proven problematic from two primary perspectives: \n",
-    "1. Customers have difficulty in clearly defining their requirements and they may not completely know what they actually even want.  Further, they often have difficulty communicating their needs.\n",
+    "Initially, the waterfall model followed a sequential process where each phase was completed and verified so that the phase's outcomes (deliverables) would serve as inputs into the next phase. However, for all but the most well-defined projects (i.e., projects that have unambiguous requirements with customers unlikely to change the project's scope), this method has proven problematic from two primary perspectives:\n",
+    "1. Customers have difficulty clearly defining their requirements and may not completely know what they actually want. Further, they often have difficulty communicating their needs.\n",
     "2. Developers invariably will make mistakes during the development process. Our methodology should help find and correct those mistakes as soon as possible.\n",
     "\n",
-    "Within project management circles, a well-known cartoon ([https://www.businessballs.com/amusement-stress-relief/tree-swing-cartoon-pictures-early-versions/](swing history)) demonstrates these pitfalls:\n",
+    "Within project management circles, a well-known cartoon ([swing history](https://www.businessballs.com/amusement-stress-relief/tree-swing-cartoon-pictures-early-versions/)) demonstrates these pitfalls:\n",
     "![](images/pm_swing.jpeg)\n",
     "<br>Source: <a href='https://web.archive.org/web/20150317164453/http://projectcartoon.com/cartoon/2'>https://web.archive.org/web/20150317164453/http://projectcartoon.com/cartoon/2</a>"
    ]
@@ -38,11 +35,9 @@
    "source": [
     "One problem that the \"swing cartoon\" misses is the lack of [design thinking](https://web.archive.org/web/20220611101350/https://www.nngroup.com/articles/design-thinking/). A design thinking framework starts with understanding and empathizing with the users. In the cartoon, the customer described a solution - the customer did not describe their problems or opportunities.  \n",
     "\n",
-    "Other development methods ([agile](https://en.wikipedia.org/wiki/Agile_software_development), [iterative](https://en.wikipedia.org/wiki/Iterative_and_incremental_development), and [spiral](https://en.wikipedia.org/wiki/Spiral_model)) contain the same activities as the waterfall method, but look to repeatedly perform them to incrementally build a software project. These methods strive to minimize the issues of the waterfall process by having more customer input and feedback as well as shorter development cycles to verify and validate the work being performed.\n",
+    "Other development models ([agile](https://en.wikipedia.org/wiki/Agile_software_development), [iterative](https://en.wikipedia.org/wiki/Iterative_and_incremental_development), and [spiral](https://en.wikipedia.org/wiki/Spiral_model)) contain the same activities as the waterfall model but repeatedly perform them incrementally to build a software project. These models strive to minimize the issues of the waterfall process by increasing customer input and feedback as well as having shorter development cycles to verify and validate the work performed.\n",
     "\n",
-    "Verification and validation are standard terms within the software engineering community.  Quite often, verification is referred to as \"building the product right\" while validation means \"building the right product\". That nuanced description can be quite confusing.  Validation ensures our customer needs have been met.  Verification checks that our work is being built to the defined specification.\n",
-    "\n",
-    "This notebook will focus on verification of the code we have been developing - primarily this involves unit testing of the code we write."
+    "Verification and validation are standard terms within the software engineering community.  Quite often, verification is referred to as \"building the product right\" while validation means \"building the right product\". Unfortunately, that nuanced description can be somewhat confusing. With validation, we ensure that the product meets the customer's needs. With verification, we check that the product was built to the defined specification."
    ]
   },
   {
@@ -58,20 +53,16 @@
     "The guide then breaks down these italicized words:\n",
     "- _Dynamic_: We execute the program on select inputs\n",
     "- _Expected_: We observe the expected outputs of the program and decide if the test was successful or not.\n",
-    "- _Finite_: Even the most simplest of programs can have so many different input values that exhaustive testing is infeasible. As such, testing needs to be conducted on a subset of the possible tests.\n",
-    "- _Selected_: Selecting different test cases can led to different levels of effectiveness of those test cases.  As such we must seek to create the correct set of test cases to effective evaluate our programs. \n",
+    "- _Finite_: Even the simplest of programs can have so many input values that exhaustive testing is infeasible. As such, we can only perform testing on a subset of the possible tests.\n",
+    "- _Selected_: Selecting different test cases can have different levels of effectiveness. As such, we must seek to create the correct set of test cases to evaluate our programs effectively (minimize time and effort). \n",
     "\n",
-    "This notebook will walk through developing test cases that can be run on an automated basis. Our overarching goal is two-fold:\n",
-    "1. Deliver high-quality products to our customers\n",
-    "2. Reduce costs as much as possible.\n",
-    "\n",
-    "The follow graphic demonstrates how mistakes are made and progress during the development process.  Mistakes are not just made during development phase, they can also be made during the other phases as well. Our task is to identify and correct those mistakes as soon as possible.  \n",
+    "In the next notebook, we will start to examine how we can find and fix code issues.\n",
     "\n",
     "![](images/faultProgression.png)\n",
     "\n",
-    "Latent defects can be extremely dangerous - one way they manifest themselves as zero-day defects that could allow others to illicitly access systems.\n",
+    "Latent defects can be extremely dangerous - one way they manifest themselves as zero-day defects that could allow others to access systems illicitly.\n",
     "\n",
-    "The following chart shows the relative cost of finding defects at different points in the development process.\n",
+    "The following chart shows the relative cost of fixing defects and how long it took to find them at various points in the development lifecycle.\n",
     "\n",
     "![](images/defectCost.jpeg)\n",
     "\n",
@@ -87,6 +78,14 @@
     "## References\n",
     "[1] P. Bourque and R.E. Fairley, eds., _Guide to the Software Engineering Body of Knowledge, Version 3.0_, 2014. IEEE Computer Society, www.swebok.org\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "810bca55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
